tests/samples/invalid/outscoped_variable.pn
fn main()
{
	{
		var x = 13;
	}

	return:
	x
}
